--- a/table1.html
+++ b/table1.html
@@ -5,7 +5,7 @@
 	<title>Table</title>
 </head>
 <body>
-<a href="index1.html">go back to index</a>
+<a href="index.html">go back to index</a>
 <table border="1">
     <tr><th>S.no</th><th>Name</th><th>Father's name</th><th>Mother's name</th></tr>
 	<tr><th>1.</th><th>Sydney</th><th>Arthur</th><th>Jasmine</th></tr>
