--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</pre>
 	<h4> I am not worried about making the website look beautiful right now through html and I should just focus on making sure all the tags work.</h4>
 	<h5>Here I am going to insert a link for a <em>Table</em> and <em> Registration Form</em></h5>
-	<a href="table1.html"><button class="btn btn-primary">Table</button></a>
+	<a href="table.html"><button class="btn btn-primary">Table</button></a>
 	<a href="https://mailchi.mp/b271db107d20/signup"> <button class="btn btn-primary">Register</button></a>
 	</div>
 	<hr>
